Hold the updater test to Java 8, which is what the module compiles at
Path.of and Files.readString are Java 11. The module sets no
sourceCompatibility, so it compiles at level 8, and the test sources are held
to the same level whatever JDK runs the build — 17, here, and irrelevant. The
names are held to Paths.get and Files.readAllBytes.

The app itself compiled on this run. These three were the only errors left,
and all three were in the test that was written to catch a mistake in the code
under it.